--- a/style.css
+++ b/style.css
@@ -1,78 +1,76 @@
-.abril-fatface-regular {
+.abrilfatfaceregular {
     font-family: "Abril Fatface", serif;
     font-weight: 400;
     font-style: normal;
 }
-
-.roboto-thin {
-font-family: "Roboto", serif;
-font-weight: 100;
-font-style: normal;
+.robotothin {
+  font-family: "Roboto", serif;
+  font-weight: 100;
+  font-style: normal;
 }
 
-.roboto-light {
-font-family: "Roboto", serif;
-font-weight: 300;
-font-style: normal;
+.robotolight {
+  font-family: "Roboto", serif;
+  font-weight: 300;
+  font-style: normal;
 }
 
-.roboto-regular {
-font-family: "Roboto", serif;
-font-weight: 400;
-font-style: normal;
+.robotoregular {
+  font-family: "Roboto", serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
-.roboto-medium {
-font-family: "Roboto", serif;
-font-weight: 500;
-font-style: normal;
+.robotomedium {
+  font-family: "Roboto", serif;
+  font-weight: 500;
+  font-style: normal;
 }
 
-.roboto-bold {
-font-family: "Roboto", serif;
-font-weight: 700;
-font-style: normal;
+.robotobold {
+  font-family: "Roboto", serif;
+  font-weight: 700;
+  font-style: normal;
 }
 
-.roboto-black {
-font-family: "Roboto", serif;
-font-weight: 900;
-font-style: normal;
+.robotoblack {
+  font-family: "Roboto", serif;
+  font-weight: 900;
+  font-style: normal;
 }
 
-.roboto-thin-italic {
-font-family: "Roboto", serif;
-font-weight: 100;
-font-style: italic;
+.robotothinitalic {
+  font-family: "Roboto", serif;
+  font-weight: 100;
+  font-style: italic;
 }
 
-.roboto-light-italic {
-font-family: "Roboto", serif;
-font-weight: 300;
-font-style: italic;
+.robotolightitalic {
+  font-family: "Roboto", serif;
+  font-weight: 300;
+  font-style: italic;
 }
 
-.roboto-regular-italic {
-font-family: "Roboto", serif;
-font-weight: 400;
-font-style: italic;
+.robotoregularitalic {
+  font-family: "Roboto", serif;
+  font-weight: 400;
+  font-style: italic;
 }
 
-.roboto-medium-italic {
-font-family: "Roboto", serif;
-font-weight: 500;
-font-style: italic;
+.robotomediumitalic {
+  font-family: "Roboto", serif;
+  font-weight: 500;
+  font-style: italic;
 }
 
-.roboto-bold-italic {
-font-family: "Roboto", serif;
-font-weight: 700;
-font-style: italic;
+.robotobolditalic {
+  font-family: "Roboto", serif;
+  font-weight: 700;
+  font-style: italic;
 }
 
-.roboto-black-italic {
-font-family: "Roboto", serif;
-font-weight: 900;
-font-style: italic;
+.robotoblackitalic {
+  font-family: "Roboto", serif;
+  font-weight: 900;
+  font-style: italic;
 }
-  
